--- a/GNSS Analysis.ipynb
+++ b/GNSS Analysis.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -141,7 +141,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -236,7 +238,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -256,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -319,7 +323,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -339,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -402,7 +408,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -422,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -485,7 +493,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -517,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -580,7 +590,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -600,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -663,7 +675,9 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -695,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -758,7 +772,9 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -778,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -841,7 +857,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -871,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -934,7 +952,9 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -966,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1029,7 +1049,9 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1049,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1112,7 +1134,9 @@
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1195,7 +1219,9 @@
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1496,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1521,7 +1547,7 @@
     "    else:\n",
     "        current_route.append(point)\n",
     "#gnss_helpers.get_plot_for_linestrings([route for route in routes if len(route) > 60], zoom=12)\n",
-    "gnss_helpers.get_map_for_linestrings([route for route in routes if len(route) > 60], zoom=12)"
+    "gnss_helpers.get_map_for_linestrings([route for route in routes if len(route) > 3], zoom=12)"
    ]
   },
   {
@@ -1551,15 +1577,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Next Steps\n",
+    "\n",
+    "Okay, so we're filtering by velocity, acceleration, and angular momentum * velocity (we could probably do better on this one). What can we do next? How do we quanitify the other non-carlike behaviors? Well, we've reached a certain point where we can keep trying to specify what is absolutely not-carlike, or we could just guess what a car would do given a set of samples around a point, and then say that anything that isn't carlike is non-carlike.  "
+   ]
   }
  ],
  "metadata": {
@@ -1582,129 +1610,87 @@
   },
   "widgets": {
    "state": {
-    "0c9cc0b0f7f54c5899b75b3688398107": {
-     "views": [
-      {
-       "cell_index": 22
-      }
-     ]
-    },
-    "0f79ab7e25814d9eb0d048f17f1fe331": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "1d23cec87a3d485f8dacad1fdced550d": {
-     "views": [
-      {
-       "cell_index": 58
-      }
-     ]
-    },
-    "2b3c8c49cf7a41bea8f1c07317e52caf": {
-     "views": [
-      {
-       "cell_index": 50
-      }
-     ]
-    },
-    "367bc2c5cabc481a9dc557395deb7a64": {
-     "views": [
-      {
-       "cell_index": 36
-      }
-     ]
-    },
-    "4cf21203d43a4e41b82e4369a971ad0c": {
-     "views": [
-      {
-       "cell_index": 67
-      }
-     ]
-    },
-    "607dd25115134731926d0434af6e721b": {
-     "views": [
-      {
-       "cell_index": 72
-      }
-     ]
-    },
-    "622f566a8dc6425cb01069957574d69d": {
-     "views": [
-      {
-       "cell_index": 31
-      }
-     ]
-    },
-    "62465e34277c453286eafbb3c80bda7d": {
-     "views": [
-      {
-       "cell_index": 76
-      }
-     ]
-    },
-    "6b1a0e6b9386419f98a4378df6f3839c": {
-     "views": [
-      {
-       "cell_index": 18
-      }
-     ]
-    },
-    "73cabe720c6449abaff33cc69f03dc25": {
-     "views": [
-      {
-       "cell_index": 62
-      }
-     ]
-    },
-    "749a20e1facd466fa582ca0c88d8d70d": {
+    "02052016e75e497db33bcf7cd149dfb1": {
      "views": [
       {
        "cell_index": 40
       }
      ]
     },
-    "80d2f3904e0644afa3ab9c010db92134": {
+    "10dc80ab8fa74ab580933c16a16e3baa": {
+     "views": [
+      {
+       "cell_index": 3
+      }
+     ]
+    },
+    "31fe1439926a4afaa84c51c38516339d": {
      "views": [
       {
        "cell_index": 45
       }
      ]
     },
-    "8c061f075cb4478fbc7c2a063d7f477d": {
-     "views": [
-      {
-       "cell_index": 10
-      }
-     ]
-    },
-    "adbd87b764cc4e04a4aa662b2934a65d": {
+    "3c0484c1db734a46a6cb6f8bde16db77": {
      "views": [
       {
        "cell_index": 27
       }
      ]
     },
-    "cd9eabe851f74ae1a95fef4c47762d45": {
+    "4b9290d7ab5b4d97b68c9f171494e84d": {
+     "views": [
+      {
+       "cell_index": 22
+      }
+     ]
+    },
+    "86e292b4b91044c2af2f4a72d19548e0": {
+     "views": [
+      {
+       "cell_index": 76
+      }
+     ]
+    },
+    "92fd2409614049d5b242a766ed3bc3a0": {
+     "views": [
+      {
+       "cell_index": 31
+      }
+     ]
+    },
+    "bd1fa5a474124e548de7d0410817b4fa": {
      "views": [
       {
        "cell_index": 14
       }
      ]
     },
-    "db53c50d98054c6e836d3ac05ba79136": {
+    "d4ef4374863e493da7be741eb4b1a771": {
      "views": [
       {
-       "cell_index": 68
+       "cell_index": 36
       }
      ]
     },
-    "ddc49710b899471db37a0885cf27b32e": {
+    "db67ee3a2cda428492bc2cb9ee247800": {
+     "views": [
+      {
+       "cell_index": 18
+      }
+     ]
+    },
+    "e4c34b2679764f4381cfaac2656dff49": {
      "views": [
       {
        "cell_index": 54
+      }
+     ]
+    },
+    "ff2de0cce5a64ce29c1b06ebe09f7d57": {
+     "views": [
+      {
+       "cell_index": 50
       }
      ]
     }
